cmake_minimum_required (VERSION 3.9.0)
if (POLICY CMP0111)
cmake_policy(SET CMP0111 OLD)
endif ()
project (raikv)
set (CMAKE_VERBOSE_MAKEFILE ON)
if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
include_directories (include pcre2/build raikv/include raimd/include raimd/libdecnumber/include)
add_definitions(/DPCRE2_STATIC)
if ($<CONFIG:Release>)
add_compile_options (/arch:AVX2 /GL /std:c11)
else ()
add_compile_options (/arch:AVX2 /std:c11)
endif ()
add_library(pcre2-8 STATIC IMPORTED)
set_property(TARGET pcre2-8 PROPERTY IMPORTED_LOCATION_DEBUG ../pcre2/build/Debug/pcre2-8-staticd.lib)
set_property(TARGET pcre2-8 PROPERTY IMPORTED_LOCATION_RELEASE ../pcre2/build/Release/pcre2-8-static.lib)
add_library(raikv STATIC IMPORTED)
set_property(TARGET raikv PROPERTY IMPORTED_LOCATION_DEBUG ../raikv/build/Debug/raikv.lib)
set_property(TARGET raikv PROPERTY IMPORTED_LOCATION_RELEASE ../raikv/build/Release/raikv.lib)
add_library(raimd STATIC IMPORTED)
set_property(TARGET raimd PROPERTY IMPORTED_LOCATION_DEBUG ../raimd/build/Debug/raimd.lib)
set_property(TARGET raimd PROPERTY IMPORTED_LOCATION_RELEASE ../raimd/build/Release/raimd.lib)
add_library(decnumber STATIC IMPORTED)
set_property(TARGET decnumber PROPERTY IMPORTED_LOCATION_DEBUG ../raimd/libdecnumber/build/Debug/decnumber.lib)
set_property(TARGET decnumber PROPERTY IMPORTED_LOCATION_RELEASE ../raimd/libdecnumber/build/Release/decnumber.lib)
else ()
include_directories (include raikv/include raimd/include raimd/libdecnumber/include)
add_compile_options (-Wall -Wextra -Werror -ggdb -O3 -Ofast -mavx -maes -fno-omit-frame-pointer)
add_library(raikv STATIC IMPORTED)
set_property(TARGET raikv PROPERTY IMPORTED_LOCATION ../raikv/build/libraikv.a)
add_library(raimd STATIC IMPORTED)
set_property(TARGET raimd PROPERTY IMPORTED_LOCATION ../raimd/build/libraimd.a)
add_library(decnumber STATIC IMPORTED)
set_property(TARGET decnumber PROPERTY IMPORTED_LOCATION ../raimd/libdecnumber/build/libdecnumber.a)
endif ()
add_library (sassrv STATIC src/ev_rv.cpp src/rv_host.cpp src/ev_rv_client.cpp)
if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
link_libraries (sassrv raikv raimd decnumber pcre2-8 ws2_32)
else ()
link_libraries (sassrv raikv raimd decnumber -lpcre2-8 -lpthread -lrt)
endif ()
add_definitions(-DSASSRV_VER=1.6.0-27)
add_executable (rv_server src/server.cpp)
add_executable (rv_client src/client.cpp)
